syntax = "proto3";

package events.v1;

import "models/v1/event_context.proto";
import "models/v1/survey.proto";

message SurveySubmitted {
    models.v1.EventContext context = 1;
    models.v1.Survey survey = 2;
}